# tojibot

./: .env.example  .gitignore  README.md  design.md  pyproject.toml
scripts/: run.sh
src/tojibot/: config.py  drive.py  logger.py  main.py  notifier.py  poster.py  spreadsheet.py
